# endstone-ecleaner

./: .gitignore  CMakeLists.txt  README.md  README_zh-CN.md
.github/workflows/: build.yml
include/: ecleaner.h  translate.hpp
language/: en_US.json  zh_CN.json
src/: ecleaner.cpp  version.h.in
